# rust_asr

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  run_asr.sh
.github/workflows/: rust.yml
data/: get_hello_world_wave.py
onnx/: pth2onnx.py
onnx/bash/: clean_path.sh  run.sh
src/: main.rs
