[package]
name = "rust_asr"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = "1.16.3"         # ONNX Runtime Rust binding
hound = "3.5.0"        # 用于读取 WAV 音频文件
ndarray = "0.15"       # 数组处理库（用于构造 ONNX 输入/输出）
anyhow = "1.0"         # 错误处理库（更简洁的 Result 用法）
clap = { version = "4.5", features = ["derive"] }




